# coda_mine

./: CMakeLists.txt
CUDA_Project_cmake/: BUILD_win32.bat  CmakeLists.txt  setEnv.cmd
CUDA_Project_cmake/ImageProcessing/: CmakeLists.txt
CUDA_Project_cmake/ImageProcessing/Source/: CUDA_support.cpp  CUDA_support.h  CmakeLists.txt  colorConversion.cu  common_structs.h  cropImage.cu  imageOperations.cpp  imageOperations.h  konstantsHost.h  main.cpp  sobel.cu  utils.h
CUDA_Project_cmake/cmake/: CMakeLists.txt
CUDA_Project_cmake/cmakeSupportFunctions/: CMakelists.txt
